Исправление TypeScript конфигурации для поддержки JSX namespace

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "types": ["react", "react-dom"]
   },
   "include": [
     "next-env.d.ts",
